Scale 2x, set image rendering to pixelated for crisp pixel art scaling

--- a/src/client/css/widget/playerchar.scss
+++ b/src/client/css/widget/playerchar.scss
@@ -1,9 +1,11 @@
 .playerchar-con {
   position: absolute;
+  image-rendering: pixelated;
 }
 
 .playerchar {
   overflow: hidden;
   transform-origin: 0% 0%;
   position: relative;
+  image-rendering: pixelated;
 }
