--- a/src/client/css/widget.scss
+++ b/src/client/css/widget.scss
@@ -1,3 +1,9 @@
 @import "./global";
 @import "./widget/widgetpage.scss";
 @import "./widget/playerchar.scss";
+
+#main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
