Implemented battle system via BattleRunner.
Refactored arena dimensions and waypoints.
Arena hiding and showing.
Refactored processActionQueue, added more functions for action adding actions.
More ,ath and rand util functions.
Fix bindAndLog

--- a/src/client/css/widget/playerchar.scss
+++ b/src/client/css/widget/playerchar.scss
@@ -1,6 +1,8 @@
 .playerchar-con {
   position: absolute;
   image-rendering: pixelated;
+  transition: opacity 1s linear;
+  opacity: 1;
 }
 
 .playerchar {
