Added HP, new required reward for duel, added some easing on title/hp movement
Refactored some function placements to make more sense.
Created ExpectedError so it would not log the stack trace on expected errors and log it on unexpected errors.

--- a/src/client/css/widget.scss
+++ b/src/client/css/widget.scss
@@ -1,5 +1,7 @@
 @import "./global";
+@import "./widget/hp.scss";
 @import "./widget/widgetpage.scss";
+@import "./widget/outlined-text.scss";
 @import "./widget/playerchar.scss";
 
 #main {
