--- a/src/client/css/widget.scss
+++ b/src/client/css/widget.scss
@@ -2,6 +2,7 @@
 @import "./widget/hp.scss";
 @import "./widget/widgetpage.scss";
 @import "./widget/outlined-text.scss";
+@import "./widget/hitmarker.scss";
 @import "./widget/playerchar.scss";
 
 #main {
