WIP put player action buttons below user info instead of table column

--- a/src/client/css/control.scss
+++ b/src/client/css/control.scss
@@ -36,3 +36,7 @@ article.card {
   color: white;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+.table-dark .table-row-stripe {
+  background-color: rgba(255, 255, 255, 0.05);
+}
