--- a/src/client/css/control.scss
+++ b/src/client/css/control.scss
@@ -40,3 +40,9 @@ article.card {
 .table-dark .table-row-stripe {
   background-color: rgba(255, 255, 255, 0.05);
 }
+
+.main-footer {
+  padding: 5px 10px;
+  text-align: center;
+  color: #007ea7;
+}
