--- a/src/client/css/control.scss
+++ b/src/client/css/control.scss
@@ -1,8 +1,18 @@
 @import "~bootstrap";
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: #00171F;
   color: #FFFFFF;
+}
+
+#main {
+  width: 100%;
+  height: 100%;
 }
 
 #main-nav {
